--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="15">
         <tr>
-            <td><img src="Photo/IMG_8175_polarr.JPEG" width="200px" alt="Мое фото"></td>
+            <td><img src="IMG_8175_polarr.JPEG" width="200px" alt="Мое фото"></td>
             <td> <h1>Виктория Кулик</h1>
     <p> <em>Я начинаю изучать веб дизайн</em></p>
     <p>я люблю заниматься фотографией, веду ютуб канал , моя новая любовь- чтение книг,<strong>хочу успешно работать веб-дизайнером</strong> </p></td>
